--- a/templates/teacher-login.html
+++ b/templates/teacher-login.html
@@ -24,7 +24,7 @@
 <form action="teacher-login-request" method="post">
 
 	<h1>Sign in</h1>
-	<input type="text" name="t_id" id="t_id" placeholder="Id" />
+	<input type="text" name="t_id" id="t_id" placeholder="Teacher Id" />
 	<input type="password" name="password" id="password" placeholder="Password" />
 	<button>Sign In</button>
 </form>
